beta6 relation help added

--- a/Nsiclass.Client/Areas/Admin/Views/Class/SelectVersion.cshtml
+++ b/Nsiclass.Client/Areas/Admin/Views/Class/SelectVersion.cshtml
@@ -36,14 +36,6 @@
         <div class="col-md-2">
 
         </div>
-        @*<div class="col-md-4">
-            <input type="file" name="newItems" style="display:none" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" id="fileSelected" onchange="checkfile(this);" />
-            <button type="button" class="button search" onclick="document.getElementsByName('newItems')[0].click()">Избор на файл с елементи</button>
-            <br />
-            <button type="button" class="button save" id="send">Зареждане</button>
-            <br />
-            <a class="button btncansel" asp-controller="Users" asp-action="AdminTasks">Отказ</a>
-        </div>*@
     </div>
     <div class="row" style="margin-top:15px;">
         <div class="center-block text-center">
@@ -55,7 +47,7 @@
         </div>
     </div>
     <div class="row" >
-        <img src="~/jpg/ItemsExample.jpg" alt="example" style="padding:40px;" id="helpImage" hidden>
+        <img src="~/jpg/ItemsExample.jpg" alt="example_image" style="padding:40px;" id="helpImage" hidden>
     </div>
         <input type="submit" class="btn button-invisible" value="REALSENDSEND" id="realsend" />
     
