--- a/Nsiclass.Client/Views/ClassClient/Relations.cshtml
+++ b/Nsiclass.Client/Views/ClassClient/Relations.cshtml
@@ -194,8 +194,8 @@
                 $("#validFrom").text(data["valid_From_Date"]);
                 $("#validTo").text(data["valid_To_Date"]);
                 $("#isDeleted").text(getstatus(data["isDeleted"]));
-                $("#export").html("<a style=\"margin-top:8px; margin-right:8px;\"  class=\"btn btn-info btn-sm\" href=\"/ClassClient/ExportRelation?relCode=" + data["id"] + "\">Експорт</a><br />");
-                $("#adminActions").html("<a style=\"margin-top:8px; margin-right:8px;\"  class=\"btn btn-info btn-sm\" href=\"\/Admin\/Relations\/RelDetails?relCode=" + data["id"] + "\">Редакция</a><br />");
+                $("#export").html("<a style=\"margin-top:8px; margin-right:8px;\"  class=\"button redaction\" href=\"/ClassClient/ExportRelation?relCode=" + data["id"] + "\">Експорт</a><br />");
+                $("#adminActions").html("<a style=\"margin-top:8px; margin-right:8px;\"  class=\"button redaction\" href=\"\/Admin\/Relations\/RelDetails?relCode=" + data["id"] + "\">Редакция</a><br />");
             });
         });
     }
